cart.html updated

--- a/cart.html
+++ b/cart.html
@@ -126,9 +126,9 @@
                       <img src="images/cloth_1.jpg" alt="Image" class="img-fluid">
                     </td>
                     <td class="product-name">
-                      <h2 class="h5 text-black">Top Up T-Shirt</h2>
+                      <h2 class="h5 text-black">Nike Air Force</h2>
                     </td>
-                    <td>$49.00</td>
+                    <td>£180.00</td>
                     <td>
                       <div class="input-group mb-3" style="max-width: 120px;">
                         <div class="input-group-prepend">
@@ -141,7 +141,7 @@
                       </div>
 
                     </td>
-                    <td>$49.00</td>
+                    <td>£49.00</td>
                     <td><a href="#" class="btn btn-primary btn-sm">X</a></td>
                   </tr>
 
@@ -150,9 +150,9 @@
                       <img src="images/cloth_2.jpg" alt="Image" class="img-fluid">
                     </td>
                     <td class="product-name">
-                      <h2 class="h5 text-black">Polo Shirt</h2>
+                      <h2 class="h5 text-black">Air Jordan</h2>
                     </td>
-                    <td>$49.00</td>
+                    <td>£150.00</td>
                     <td>
                       <div class="input-group mb-3" style="max-width: 120px;">
                         <div class="input-group-prepend">
@@ -165,7 +165,7 @@
                       </div>
 
                     </td>
-                    <td>$49.00</td>
+                    <td>£49.00</td>
                     <td><a href="#" class="btn btn-primary btn-sm">X</a></td>
                   </tr>
                 </tbody>
@@ -210,7 +210,7 @@
                     <span class="text-black">Subtotal</span>
                   </div>
                   <div class="col-md-6 text-right">
-                    <strong class="text-black">$230.00</strong>
+                    <strong class="text-black">£230.00</strong>
                   </div>
                 </div>
                 <div class="row mb-5">
@@ -218,7 +218,7 @@
                     <span class="text-black">Total</span>
                   </div>
                   <div class="col-md-6 text-right">
-                    <strong class="text-black">$230.00</strong>
+                    <strong class="text-black">£230.00</strong>
                   </div>
                 </div>
 
@@ -278,9 +278,9 @@
             <div class="block-5 mb-5">
               <h3 class="footer-heading mb-4">Contact Info</h3>
               <ul class="list-unstyled">
-                <li class="address">203 Fake St. Mountain View, San Francisco, California, USA</li>
-                <li class="phone"><a href="tel://23923929210">+2 392 3929 210</a></li>
-                <li class="email">emailaddress@domain.com</li>
+             
+                <li class="phone"><a href="tel://23923929210">+44 7765899499</a></li>
+                <li class="email">@Ph.Kicks</li>
               </ul>
             </div>
 
